user story 1 done

--- a/app/views/mechanics/index.html.erb
+++ b/app/views/mechanics/index.html.erb
@@ -3,6 +3,8 @@
 <% @mechanics.each do |mechanic| %>
   <section class="mechanic-<%= mechanic.id %>">
     <p> Name: <%= mechanic.name %></p>
-    <p> Years of Experience: <%= mechanic.years_experience %></p>
+    <p> Years of Experience: <%= mechanic.years_experience %></p> <br><br>
   </section>
-<% end %>
+<% end %><hr>
+
+<p>Average Experience: <%= Mechanic.average_experience %></p>
