user story 2 done

--- a/app/views/mechanics/show.html.erb
+++ b/app/views/mechanics/show.html.erb
@@ -2,7 +2,7 @@
 <p><b>Years of Experience: <%= @mechanic.years_experience %></b></p><hr>
 
 <section class="rides">
-  <% @mechanic.rides.each do |ride| %>
+  <% @mechanic.rides_by_thrill_rating.each do |ride| %>
     <%= ride.name if ride.open == true %>
   <% end %>
 </section>
